Activity Transitions for Material Theme.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.DemoActivityForTransition"
+            android:label="@string/title_activity_demo_activity_for_transition" >
+        </activity>
     </application>
 
 </manifest>
